--- a/MiPrimerPlataformero/.godot/editor/editor_layout.cfg
+++ b/MiPrimerPlataformero/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,32 +13,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-344
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets_PixelAdventure/Terrain/Terrain (16x16).png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://fonts/", "res://Assets_PixelAdventure/", "res://Assets_PixelAdventure/Terrain/", "res://Assets_PixelAdventure/Menu/Buttons/", "res://Assets_PixelAdventure/Main Characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets_PixelAdventure/Enemies/AngryPig/angryPig.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets_PixelAdventure/", "res://Assets_PixelAdventure/Menu/Buttons/", "res://Assets_PixelAdventure/Items/Checkpoints/End/", "res://Assets_PixelAdventure/Items/Checkpoints/Checkpoint/", "res://Assets_PixelAdventure/Fonts/", "res://Assets_PixelAdventure/Enemies/", "res://Assets_PixelAdventure/Enemies/AngryPig/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/menu.tscn", "res://scenes/level_one.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/level_one.tscn"
-center_split_offset=-317
+open_scenes=PackedStringArray("res://scenes/menu.tscn", "res://scenes/level_one.tscn", "res://scenes/player.tscn", "res://parallax.tscn", "res://scenes/kiwi.tscn", "res://scenes/angry_pig.tscn")
+current_scene="res://scenes/angry_pig.tscn"
+center_split_offset=-270
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Player.gd"]
-selected_script="res://scripts/Player.gd"
-open_help=[]
+open_scripts=["res://scripts/AngryPig.gd", "res://scripts/DeadZone.gd", "res://scripts/Player.gd"]
+selected_script="res://scripts/DeadZone.gd"
+open_help=["Area2D", "Node2D", "PhysicsBody2D"]
 script_split_offset=70
 list_split_offset=0
 
